changed headings font sizes

--- a/src/nb_analysis.ipynb
+++ b/src/nb_analysis.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Business Understanding\n"
+    "#Business Understanding\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Data Understanding"
+    "#Data Understanding"
    ]
   },
   {
@@ -860,14 +860,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##1. Which countries show the highest and lowest job and career satisfaction?"
+    "#1. Which countries show the highest and lowest job and career satisfaction?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Prepare data for question 1"
+    "##Prepare data for question 1"
    ]
   },
   {
@@ -1145,7 +1145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Plot results for question 1"
+    "##Plot results for question 1"
    ]
   },
   {
@@ -1238,21 +1238,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Conclusion for question 1"
+    "##Conclusion for question 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##2. "
+    "#2. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Prepare data for question 2"
+    "##Prepare data for question 2"
    ]
   },
   {
@@ -1599,7 +1599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Plot results for question 2"
+    "##Plot results for question 2"
    ]
   },
   {
@@ -1698,21 +1698,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Conclusion for question 2"
+    "##Conclusion for question 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##3. "
+    "#3. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Prepare data for question 3"
+    "##Prepare data for question 3"
    ]
   },
   {
@@ -2111,7 +2111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Plot results for question 3"
+    "##Plot results for question 3"
    ]
   },
   {
@@ -2202,7 +2202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Conclusion for question 3"
+    "##Conclusion for question 3"
    ]
   }
  ],
