--- a/src/nb_analysis.ipynb
+++ b/src/nb_analysis.ipynb
@@ -1288,7 +1288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interestingly, five of the countries with the lowest overall job and career satisfaction are in East and Southeast Asia. The five countries with the highest overall satisfaction, on the other hand, are located in Latin America, Europe, and the Middle East. Another phenomenon that should be investigated further is that career satisfaction is higher than job satisfaction in all ten countries. This knowledge could be useful in developing additional measures to improve overall satisfaction."
+    "Interestingly, the five countries with the lowest overall job and career satisfaction are in East and Southeast Asia. The five countries with the highest overall satisfaction, on the other hand, are located in Latin America, Europe, and the Middle East. Another phenomenon that should be investigated further is that career satisfaction is higher than job satisfaction in all ten countries. This knowledge could be useful in developing additional measures to improve overall satisfaction."
    ]
   },
   {
